# python29

./: .env.sample  catalog.json  pyproject.toml
Frogadier_blog/: admin.py  apps.py  models.py  urls.py  views.py
Frogadier_blog/migrations/: 0001_initial.py
Frogadier_blog/templates/Frogadier_blog/: base_frogo.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
Frogadier_blog/templates/Frogadier_blog/includes/: inc_menu.html
blog/migrations/: 0001_initial.py
catalog/: forms.py  models.py  urls.py  views.py
catalog/management/commands/: delete_all.py
catalog/migrations/: 0001_initial.py  0002_initial.py
catalog/templates/: base.html  products_list.html
catalog/templates/catalog/: base.html  contact.html  index.html  product_list.html
catalog/templates/catalog/includes/: headers.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  user_form.html
